# openzim

./: .gitignore
zimwriterfs/: CMakeLists.txt  zimwriterfs.cpp
